# my_depot

tspeech/: s_class  s_class.cpp  s_stl.cpp  st_pt.cpp
tspeech/src/: CMakeLists.txt
tspeech/src/include/: Employee.hpp  Engineer.hpp  Manager.hpp
tspeech/src/src/: Employee.cpp  Engineer.cpp  Manager.cpp  main.cpp
练习1(1)/: 练习1.css  练习1.html  练习1.js
练习1（2）/: 练习1（2).html  练习1（2）.css  练习1（2）.js
